--- a/hw02/index.html
+++ b/hw02/index.html
@@ -178,9 +178,9 @@
   <!-- ------------------------------------------------>
   <div class="row hw12">
     <div class="col-md-12 twenty">
-      Simple Baseline 的截圖，請放在 https://github.com/<span style="color:red;">你的帳號</span>/ct2024s/hw<span style="color:red;">02</span>/src/ 檔案夾。
-      Medium Baseline 的截圖，請放在 https://github.com/<span style="color:red;">你的帳號</span>/ct2024s/hw<span style="color:red;">02</span>/src/ 檔案夾。
-      Strong Baseline 的截圖，請放在 https://github.com/<span style="color:red;">你的帳號</span>/ct2024s/hw<span style="color:red;">02</span>/src/ 檔案夾。
+      Simple Baseline 的截圖，請放在 https://github.com/<span style="color:red;">你的帳號</span>/ct2024s/hw<span style="color:red;">02</span>/simple/ 檔案夾。
+      <br>Medium Baseline 的截圖，請放在 https://github.com/<span style="color:red;">你的帳號</span>/ct2024s/hw<span style="color:red;">02</span>/medium/ 檔案夾。
+      <br>Strong Baseline 的截圖，請放在 https://github.com/<span style="color:red;">你的帳號</span>/ct2024s/hw<span style="color:red;">02</span>/strong/ 檔案夾。
     </div>
   </div>
 
@@ -188,7 +188,7 @@
   <div class="row hw12">
     <div class="col-md-12 twenty">
       壓縮檔位置連結：
-      <input type="button" name="back" onclick="location.href='https://github.com/AvaLiya/ct2024s/tree/main/hw02/strong'" value="按我 ٩(｡・ω・｡)و 前往">
+      <input type="button" name="back" onclick="location.href='https://github.com/Davianrider/ct2024s/tree/main/hw02/strong'" value="按我 ٩(｡・ω・｡)و 前往">
       (p.s 請記得修改網址)
     </div>
   </div>
@@ -197,7 +197,7 @@
   <!-- ------------------------------------------------>
   <div class="row hw12">
     <div class="col-md-12 twenty">
-      心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。
+      心得:<br>HW2的作業是練習如何生成手寫稿紙的練習，從simple Baseline的環境架設，使用Anaconda3軟體生成稿紙，再到Medium Baseline生成稿紙的PDF，最後再壓縮稿紙上傳Git hub即完成這次作業，本次課程可以在之後想要再擴充字的時候，可以迅速產生手寫稿紙.
     </div>
   </div>
 
@@ -213,19 +213,19 @@
         </tr>
         <tr>
           <td rowspan="7" id="myTotal"></td>
-          <td><input type="checkbox" class="flipswitch" id="myCheckbox1"></td>
-          <td id='m1'>2</td>
-          <td>Simple baseline - 描述、描述、描述</td>
+          <td><input type="checkbox" class="flipswitch" id="myCheckbox1" checked></td>
+          <td id='m1'>3</td>
+          <td>Simple baseline - 套件安裝完成截圖</td>
         </tr>
         <tr>
           <td><input type="checkbox" class="flipswitch" id="myCheckbox2" checked></td>
-          <td id='m2'>6</td>
-          <td>Medium baseline - 描述、描述、描述 </td>
+          <td id='m2'>4</td>
+          <td>Medium baseline - 稿紙.pdf成果截圖 </td>
         </tr>
         <tr>
-          <td><input type="checkbox" class="flipswitch" id="myCheckbox3"></td>
-          <td id='m3'>2</td>
-          <td>Strong baseline - 描述、描述、描述 </td>
+          <td><input type="checkbox" class="flipswitch" id="myCheckbox3" checked></td>
+          <td id='m3'>3</td>
+          <td>Strong baseline - 將pdf壓縮上傳並在作品集建立連結 </td>
         </tr>
       </table>
     </div>
@@ -233,10 +233,14 @@
 
   <!-- ------------------------------------------------>
   <div class="row hw12">
-    <div class="col-md-12 twenty">
-      <video id="video1" style="width:100%;max-width:100%;" controls="">
-        <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
-      </video>
+    <div class="col-md-12 twenty">    
+      <img src="./simple/simple.jpg" width="1200px" height="600px"/>
+    </div>
+  </div>
+
+  <div class="row hw12">
+    <div class="col-md-12 twenty">    
+      <img src="./medium/medium.jpg" width="1200px" height="600px"/>      
     </div>
   </div>
 
@@ -282,17 +286,6 @@
     d3.select("#myTotal").html(score);    
   }
 </script>
-
-<!-- ------------------------------------------------>
-<div class="row hw12">
-  <div class="col-md-12 twenty">
-    壓縮檔位置連結：
-    <input type="button" name="back" onclick="location.href='https://github.com/AvaLiya/ct2024s/tree/main/hw02/strong'" value="按我 ٩(｡・ω・｡)و 前往">
-    (p.s 請記得修改網址)
-  </div>
-</div>
-<!-- ------------------------------------------------>
-
 
 </body>
 </html>
