--- a/hw03/index.html
+++ b/hw03/index.html
@@ -272,7 +272,7 @@
   <div class="row hw12">
     <div class="col-md-12 twenty">
       <a href="https://drive.google.com/file/d/1wmpaHL7oiRTZzfJxFQFrYqqT_pm0PmUl/view?usp=sharing" download="Medium_112598084_陳柏勳">Medium_112598084_陳柏勳</a><br>      
-      <img src="./Medium/medium.jpg" width="1200px" height="600px"/>      
+      <img src="./medium/medium.jpg" width="1200px" height="600px"/>      
     </div>
   </div>
   <!-- ------------------------------------------------>  
@@ -285,7 +285,7 @@
   <div class="row hw12">
     <div class="col-md-12 twenty">
       <a href="https://drive.google.com/file/d/16dy0x9kRE_GGnE9p8n2Zqbuf1v1utFB9/view?usp=sharing" download="Strong_112598084_陳柏勳">Strong_112598084_陳柏勳</a><br>      
-      <img src="./Strong/strong.jpg" width="1200px" height="600px"/>        
+      <img src="./strong/strong.jpg" width="1200px" height="600px"/>        
     </div>
   </div>
   <!-- ------------------------------------------------>
