--- a/hw01/index.html
+++ b/hw01/index.html
@@ -254,7 +254,8 @@
   <!-- ------------------------------------------------>
   <div class="row hw12">
     <div class="col-md-12 twenty">
-      心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。
+      心得報告<br>
+      書法中的合字與連字亦需細緻的筆觸與組合，不同的程式語言與函式庫彷彿是字形，而將它們巧妙地組合在一起，就像是創造出了一幅幅精美的書法作品。此外，像是優化演算法、整合系統等技術也類似於合字的概念，將各個元件結合成更為高效的整體。而連字確保程式碼的流暢運行與美觀可讀性。
     </div>
   </div>
 
