--- a/hw04/index.html
+++ b/hw04/index.html
@@ -200,8 +200,8 @@
   <div class="row hw12">
     
     <div class="col-md-12 twenty">
-      <h4><u>心得(約100字)</u></h4>
-      
+      <h4><u>心得</u></h4>
+      向量化SVG在字體設計中被廣泛使用，因為它可以精確地描述字形的複雜曲線和細節。透過向量化SVG，字體設計師可以創建出高品質的字型，無論是在小型網站還是高解析度的打印品上都能保持清晰度和細緻度。同時，SVG格式的靈活性和可編輯性也使得設計師可以輕鬆地調整字型的大小、顏色和樣式，以滿足不同的設計需求。      
     </div>
   </div>
 
