--- a/hw06/index.html
+++ b/hw06/index.html
@@ -178,7 +178,7 @@
   <!-- ------------------------------------------------>
   <div class="row hw12">
     <div class="col-md-12 twenty">
-      該次作業程式碼，請放在 <a href="https://github.com/chiaoooo/ct2024s/tree/main/hw06/src/upload_csv/hsieh.csv" >https://github.com/<span style="color:red;">Davian</span>/ct2024s/hw<span style="color:red;">06</span>/src/upload_csv 檔案夾。
+      該次作業程式碼，請放在 <a href="https://github.com/Davianrider/ct2024s/blob/main/hw06/src/upload_csv/chen.csv" >https://github.com/<span style="color:red;">Davianrider</span>/ct2024s/hw<span style="color:red;">06</span>/src/upload_csv 檔案夾。
     </div>
   </div>
 
