--- a/hw06/index.html
+++ b/hw06/index.html
@@ -225,7 +225,7 @@
        <table>
         <tr>
           <td>
-            <img src="src/compare_lpips_ssim/chen/Figure_1.png" height="600" width="900">
+            <img src="src/upload_csv/chen.jpg" height="600" width="900">
           </td>
         </tr>
       </table>
