--- a/hw06/hover.html
+++ b/hw06/hover.html
@@ -103,7 +103,7 @@
                         .duration(200)
                         .style("opacity", .9);
                     tooltip.html("<div>" +
-                                "<img src='src/upload_csv" + d.Student + "' alt='Handwriting' width='120' height='120'>" +
+                                "<img src='src/chen" + d.Student + "' alt='Handwriting' width='120' height='120'>" +
                                 "<p>SSIM: " + d.SSIM + "</p>" +
                                 "<p>LPIPS: " + d.LPIPS + "</p>" +
                                 "</div>")
