--- a/hw06/hover.html
+++ b/hw06/hover.html
@@ -102,11 +102,7 @@
                     tooltip.transition()
                         .duration(200)
                         .style("opacity", .9);
-                    tooltip.html("<div>" +
-                                "<img src='src/chen" + d.Student + "' alt='Handwriting' width='120' height='120'>" +
-                                "<p>SSIM: " + d.SSIM + "</p>" +
-                                "<p>LPIPS: " + d.LPIPS + "</p>" +
-                                "</div>")
+                    tooltip.html("<img src='src/chen/" + d.Student + "' alt='Handwriting' width='120' height='120'>")
                         .style("left", (d3.event.pageX) + "px")
                         .style("top", (d3.event.pageY - 28) + "px");
                 })
