--- a/hw06/index.html
+++ b/hw06/index.html
@@ -185,7 +185,7 @@
   <!-- ------------------------------------------------>
   <div class="row hw12">
     <div class="col-md-12 twenty">
-      心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。
+      通過融合圖像的多個特徵來計算相似度。這些特徵可以包括顏色、紋理、形狀等多個方面，從而更全面地描述了圖像的特徵。相比於單一特徵的度量方法，更能夠準確地捕捉到圖像的差異和相似之處，通過將多個特徵進行加權融合，可以得到一種直觀的相似度度量結果。這也為實際應用提供了便利，使得開發人員能夠更輕鬆地將其集成到自己的項目中。
     </div>
   </div>
 
